--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=8080
 MONGODB_CNN=mongodb+srv://mariano1991:theelephant1991@cafeshopdb.yvvjs3r.mongodb.net/cafeShopDB
-
+SECRETORPRIVATEKEY=Est03sMiPuBl1cK3y@1298 
 
