Fin Seccion 11 -version 4.0.0

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT=8080
 MONGODB_CNN=mongodb+srv://mariano1991:theelephant1991@cafeshopdb.yvvjs3r.mongodb.net/cafeShopDB
 SECRETORPRIVATEKEY=Est03sMiPuBl1cK3y@1298 
 
+GOOGLE_CLIENT_ID=514129518939-qv6nfl0l0eqtc71fnart75neiodgiu22.apps.googleusercontent.com
+GOOGLE_SECRET_ID=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
